--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,6 +56,13 @@
   font-size: 1.5rem;
 }
 
+.checkout {
+  display: grid;
+  gap: 10px;
+  font-weight: bold;
+  text-align: center;
+}
+
 .code {
   background: #fafafa;
   border-radius: 5px;
@@ -79,7 +86,6 @@
   padding: 1.5rem;
   text-align: left;
   color: inherit;
-  text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
@@ -87,6 +93,22 @@
   position: relative;
   align-self: stretch;
   list-style-type: none;
+  display: grid;
+  grid-template-rows: auto 50px 200px auto;
+}
+
+.card a {
+  text-decoration: none;
+}
+
+.button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 7px;
+  background-color: palevioletred;
+  color: white;
+  cursor: pointer;
+  margin-top: auto;
 }
 
 .card:hover,
