--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -109,6 +109,9 @@
   color: white;
   cursor: pointer;
   margin-top: auto;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
 
 .card:hover,
