--- a/components/navbar/Navbar.module.css
+++ b/components/navbar/Navbar.module.css
@@ -1,6 +1,16 @@
 .navbar {
   display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
+  gap: 10px;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar {
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
 }
